# rebuildcpr

./: .gitignore  .gitmodules  .mxproject  CLAUDE.md  CMakeLists.txt  CprSensor.ioc  README.md  actual_ports.txt  analyze.py  analyze_log.py  analyze_v2.py  cmake_ports.txt  read_regs.jlink  uvprojx_ports_fixed.txt
.github/: copilot-instructions.md
Core/Inc/: FreeRTOSConfig.h  i2c.h  iwdg.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h  usart.h
Core/Src/: adc.c  dma.c  freertos.c  gpio.c  i2c.c  iwdg.c  main.c  rtc.c  spi.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c  tim.c  usart.c
Core/Startup/: startup_stm32f103xe_gcc.s
MDK-ARM/: CprSensor.uvguix.senki  CprSensor.uvoptx  CprSensor.uvprojx  JLinkLog.txt  build_log.txt  startup_stm32f103xe.lst
MDK-ARM/CprSensor/: CprSensor.axf  CprSensor.build_log.htm  CprSensor.htm  CprSensor.lnp  CprSensor_CprSensor.dep
MDK-ARM/RTE/_CprSensor/: RTE_Components.h
SEGGER/: SEGGER_RTT_Conf.h
Test/: CprSensorTest.py  ble_autoprobe.py  rtc_boot_test.py
USB_DEVICE/App/: usb_device.c  usbd_cdc_if.c  usbd_cdc_if.h
User/: README.md  pinmap.md  rep_config.h
User/bsp/: bsp_rtt.c  bsp_rtt.h  bspanlogiic.c  bspanlogiic.h  bspgpio.c  bspgpio.h  bspiic.c  bspiic.h  bspspi.c  bspspi.h  bspuart.c  bspuart.h  bspusb.c  bspusb.h
User/manager/: README.md  manager.c  manager.h
User/manager/audio/: audio.c  audio.h  audio.md
User/manager/comm/frameprocess/: frameprocess.c  frameprocess.h  frameprocess_data.c  frameprocess_pack.c  frameprocess_port.c
User/manager/cpralg/: CprFeedback_C.h  cpr_press_mdata_storage.md  cpralgmgr.c  cpralgmgr.h
User/manager/iotmanager/: cprsensor_protocol.c  cprsensor_protocol.h  iotmanager.c  iotmanager.h  protcolmgr.c  protcolmgr.h  protcolmgr_debug.c  protcolmgr_debug.h
User/manager/memory/: memory.c  memory.h  memory_debug.c  memory_debug.h
User/manager/power/: power.c  power.h
User/manager/selfcheck/: selfcheck.c  selfcheck.h  selfcheck_fault.c  selfcheck_fault.h
User/manager/sensor/: sensor.c  sensor.h
User/manager/update/: update.c  update.h
User/manager/wireless/: wireless.c  wireless.h  wireless.md  wireless_ble.c  wireless_ble.h  wireless_internal.h  wireless_wifi.c  wireless_wifi.h  wirelessmanager.c  wirelessmanager.h
User/manager/wireless/frameprocess/: frameprocess.c  frameprocess.h  frameprocess_data.c  frameprocess_pack.c  frameprocess_port.c
User/port/: README.md  drvadc_port.c  drvadc_port.h  drvanlogiic_port.c  drvanlogiic_port.h  drvgpio_port.c  drvgpio_port.h  drviic_port.c  drviic_port.h  drvmcuflash_port.c  drvmcuflash_port.h  drvspi_port.c  drvspi_port.h  drvuart_port.c  drvuart_port.h  drvusb_port.c  drvusb_port.h  ec800m_port.c  ec800m_port.h  esp32c5_port.c  esp32c5_port.h  fc41dport.c  fc41dport.h  frameparser_port.c  frameparser_port.h  gd25qxxx_port.c  gd25qxxx_port.h  lis2hh12_port.c  lis2hh12_port.h  log_port.c  log_port.h  lsm6_port.c  lsm6_port.h  mpu6050_port.c  mpu6050_port.h  pca9535_port.c  pca9535_port.h  ringbuffer_port.c  ringbuffer_port.h  rtos_port.c  (+15 more)
User/system/: README.md  rtos_port.c  sysmgr.c  sysmgr.h  systask.c  systask.h  system.c  system.h  system_debug.c  system_debug.h
cmake/linker/: STM32F103RETx_FLASH.ld  stm32f103xe_flash.ld
cmake/toolchains/: arm-none-eabi.cmake
example/: app_wireless.c  app_wireless.h
plan/: 0x05_selfcheck_fault_report.md  audio_module.md  rep-weak-to-ops-migration.md  rootfs-plan.md  task_module_init.md
scripts/vscode/: jlink.ps1  workspace.config.psd1
